# noapi-google-search-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/google_search_mcp/: __init__.py  server.py
