[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noapi-google-search-mcp"
version = "0.1.2"
description = "Google Search for Local LLMs — No API Key Required. MCP server using headless Chromium via Playwright."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vincent Kaufmann", email = "vincent@kaufmann.dev" },
]
keywords = ["mcp", "google", "search", "playwright", "llm", "ai", "local-llm", "no-api", "chromium", "lm-studio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
noapi-google-search-mcp = "google_search_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_search_mcp"]

[project.urls]
Homepage = "https://github.com/VincentKaufmann/google-search-mcp"
Repository = "https://github.com/VincentKaufmann/google-search-mcp"
Issues = "https://github.com/VincentKaufmann/google-search-mcp/issues"
